--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Stasis Chambers.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Stasis Chambers" startnode="1" creator="Twine" creator-version="2.3.16" ifid="5BE8EF83-3BC4-4EAF-BDE3-55C46818F7A6" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Untitled Passage" tags="" position="406,172" size="100,100">
+<tw-storydata name="Stasis Chambers" startnode="1" creator="Twine" creator-version="2.3.16" ifid="5BE8EF83-3BC4-4EAF-BDE3-55C46818F7A6" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Title Passage" tags="" position="406,172" size="100,100">
 #STASIS CHAMBERS
 
 ###An interactive fiction piece on the perils of being forced horizontal
@@ -18,8 +18,21 @@
 
 #### [[Info]]
 
-&lt;audio src=&quot;./audio/coughing.mp3&quot; autoplay loop /&gt;</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="" position="526,172" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;=XX=&quot;)[#####Morning. you know so from the sound of a hundred homing pigeons circling your house from next door. The air in the room is stale and that familiar ache throughout your body makes it feel like ground-hog day again. The shift last night was tough, but nothing that you haven&#39;t experienced before, and nothing that would warrant this burning sensation coursing through your body. You should probably [[check the time]]]&lt;audio src=&quot;./audio/pigeons.mp3&quot; autoplay loop /&gt;</tw-passagedata><tw-passagedata pid="3" name="Info" tags="" position="290,170" size="100,100"> http://www.jstor.org/stable/3173239
- </tw-passagedata><tw-passagedata pid="4" name="check the time" tags="" position="526,322" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+&lt;audio src=&quot;./audio/coughing.mp3&quot; autoplay loop /&gt;</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="" position="526,172" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;=XX=&quot;)[#####Morning. You know so from the sound of a hundred homing pigeons circling your house that live next door. The air in the room is stale and that familiar ache throughout your body makes it feel like ground-hog day again. The shift last night was tough, but nothing that you haven&#39;t experienced before, and nothing that would warrant this burning sensation coursing through your body. You should probably [[check the time]]]&lt;audio src=&quot;./audio/pigeons.mp3&quot; autoplay loop /&gt;</tw-passagedata><tw-passagedata pid="3" name="Info" tags="" position="290,170" size="100,100">######(align:&quot;&lt;==&quot;)+(box:&quot;=XX=&quot;)[
+
+(align:&quot;=&gt;&lt;=&quot;)[#Psycholgy Homework - 2020 - Graduation piece.]
+
+//(text-style:&quot;superscript&quot;)[###Before our last session I want you to partake in the first exercise I had you complete before we commenced. Describe your current situation. I hope you&#39;ll see the shift in your perspective.]//
+
+(text-style:&quot;fidget&quot;)[####You are Michael. 28 Years old. You are studying full time, and work part time at a grocery store. The pay isn&#39;t great but it helps you keep up on rent. You share a run down house with your partner Rose, and Best mate Tom. Historically you&#39;ve been physically healthy, experiencing some mental health issues over the last decade. Lately you have felt a real improvement with things since enrolling in that course you always wanted to take, which meant you finally got to leave the hell hole you&#39;d been working at over the past year.
+
+The shifts at the grocery store have been pretty tough. Splitting those pallets made lugging all that timber seem easy sometimes, and you don&#39;t get home til way after Rose has been asleep. Sometimes it&#39;s like you&#39;re two ships passing in the night. ]</tw-passagedata><tw-passagedata pid="4" name="check the time" tags="" position="526,322" size="100,100">8:30 am. [[The Last Text]] you sent before you went to bed last night was stamped at 11:38. That&#39;s 9 Hours. 9 Hours and you feel like you&#39;ve been dancing a Rhumba all night. Work isn&#39;t untill 10, you could [[Sleep In]] or push yourself to [[get up]] and book that doctors appointment you&#39;ve been putting off.</tw-passagedata><tw-passagedata pid="5" name="The Last Text" tags="" position="376,472" size="100,100">
+
+
+
+
+
+(link-goto:&quot;(text-colour:white)+(bg:blue)[11:37: Nothing I&#39;ve done so far seems to have helped. I can sleep for 10 hours, or none, ice or Ibuprofen; I always wake up the same]&quot;,&quot;check the time&quot;)</tw-passagedata><tw-passagedata pid="6" name="Sleep In" tags="" position="526,472" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="7" name="get up" tags="" position="676,472" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
