--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Stasis Chambers.</tw-noscript></noscript></tw-story>
 <tw-storydata name="Stasis Chambers" startnode="1" creator="Twine" creator-version="2.3.16" ifid="5BE8EF83-3BC4-4EAF-BDE3-55C46818F7A6" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Title Passage" tags="" position="406,172" size="100,100">
-#STASIS CHAMBERS
+STASIS CHAMBERS
 
 #####An interactive fiction piece on the perils of being forced horizontal
 
-###### [[Begin]]
+##### [[Begin]]
 
 
 
@@ -51,9 +51,9 @@
 
 #####The doctor calls you in with a flat, monotonal voice like a butcher calling out a  numbered ticket. They rattle off questions, staring at the computer monitor the whole time, avoiding eye contact. The doctor suggests you should get a blood test and says if you leave now can probably still make it before they close for the day. 
 
-[[try to get a blood test]]
+#####[[try to get a blood test]]
 
-[[go back to bed and try tomorrow]]</tw-passagedata><tw-passagedata pid="16" name="try to get a blood test" tags="" position="635,1201" size="100,100">#####You feel that waiting any longer is not an option. It took you this much effort just to get out of bed, let alone make it to this appointment. You decide to make a dash to get a blood test.
+#####[[go back to bed and try tomorrow]]</tw-passagedata><tw-passagedata pid="16" name="try to get a blood test" tags="" position="635,1201" size="100,100">#####You feel that waiting any longer is not an option. It took you this much effort just to get out of bed, let alone make it to this appointment. You decide to make a dash to get a blood test.
 
 #####The clinic is quiet, which puts you at ease. You don&#39;t have to pretend that you&#39;re not completely disorientated at this point. Even driving your car is a gamble, not knowing if you&#39;re awake or asleep. You have to dig your finger nail into the quick to keep that little demon at bay. The nurse calls you in and the test is over within ten minutes. She tells me about chronic fatigue syndrome, and if you&#39;ve ever heard of it before. You thought it was something you got from glandular fever or malnourishment, but she explains that anyone can get it, and tells you of a website to check out. You thank her and head back home, feeling like you&#39;ve made some [[progress.-&gt;progress]] </tw-passagedata><tw-passagedata pid="17" name="go back to bed and try tomorrow" tags="" position="785,1201" size="100,100">#####The lack of enthusiasm and fresh air at the doctors clinic has left you feeling drowsy. Luckily the clinic is not far from home. The thought of facing the rest of the day seems insermountable.You swiftly return home, back to the glory of your [[stasis chambers-&gt;Stasis Chambers]] </tw-passagedata><tw-passagedata pid="18" name="Stasis Chambers" tags="" position="785,1351" size="100,100">#####Afternoon. You know so from the sound of a hundred homing pigeons circling your house that live next door. The air in the room is stale and that familiar ache throughout your body makes it feel like ground-hog day again. The shift last night was tough, but nothing that you haven&#39;t experienced before, and nothing that would warrant this burning sensation coursing through your body.
 
