--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Stasis Chambers.</tw-noscript></noscript></tw-story>
 <tw-storydata name="Stasis Chambers" startnode="1" creator="Twine" creator-version="2.3.16" ifid="5BE8EF83-3BC4-4EAF-BDE3-55C46818F7A6" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Title Passage" tags="" position="406,172" size="100,100">
-STASIS CHAMBERS
+
+#STASIS CHAMBERS
 
 #####An interactive fiction piece on the perils of being forced horizontal
 
